Fix RankDisplay