@@ -7,6 +7,8 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 /**
@@ -15,9 +17,9 @@ import java.net.URL;
  * @date: 2023-07-22 15:03:24
  */
 public class WebUtil {
-    public static JSONObject getJSON(String url) throws IOException, JSONException {
+    public static JSONObject getJSON(String url) throws IOException, JSONException, URISyntaxException {
         JSONObject jsonObject;
-        HttpURLConnection connection = (HttpURLConnection) new URL(url).openConnection();
+        HttpURLConnection connection = (HttpURLConnection) new URL(new URI(url).toASCIIString()).openConnection();
         try (InputStream inputStream = connection.getInputStream()) {
             try (ByteArrayOutputStream out = new ByteArrayOutputStream()) {
                 int len;
